CMAKE_MINIMUM_REQUIRED( VERSION 2.6 )

PROJECT( SceneGraph )

SET( MAIN_DIR ${CMAKE_CURRENT_SOURCE_DIR} )

ADD_SUBDIRECTORY( nodes )
ADD_SUBDIRECTORY( other )
ADD_SUBDIRECTORY( properties )
ADD_SUBDIRECTORY( shapes )

GET_PROPERTY( HEADER_FILES DIRECTORY PROPERTY HEADER_FILES )
GET_PROPERTY( SOURCE_FILES DIRECTORY PROPERTY SOURCE_FILES )

FIND_PACKAGE( GLU )
FIND_PACKAGE( GLUT )
FIND_PACKAGE( OpenGL )

set( CORELIBS ${GLUT_LIBRARY} ${OPENGL_LIBRARY} )

INCLUDE_DIRECTORIES( 
	${MAIN_DIR}/nodes
	${MAIN_DIR}/other
	${MAIN_DIR}/properties
	${MAIN_DIR}/shapes
	/usr/include/GL
)

ADD_EXECUTABLE( SceneGraph SceneGraph.cpp ${SOURCE_FILES} ${HEADER_FILES} )

TARGET_LINK_LIBRARIES( SceneGraph ${CORELIBS} )

